@@ -1,14 +1,11 @@
 package com.example.demo.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import com.example.demo.model.Item;
-
-import java.util.List;
-import java.util.stream.Collectors;
 
 //TODO: SpringBoot:Practical 5 (Group) - Search function restful services
 
@@ -40,6 +37,6 @@ public class ItemServiceAnalysis {
 	public List<Item> getAllItemsWithDemo() {
 		return itemService.getAllItems().stream()
 			.filter(item -> item.value().toLowerCase().contains("demo"))
-			.collect(Collectors.toList());
+			.toList();
 	}
 }
